# finance-tracker

./: README.md  pyproject.toml
src/: database.py  main.py
src/apps/: budget.py  networth.py  reports.py  targets.py  transactions.py
