[project]
name = "finances"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.20.0",
]

[project.scripts]
finances = "main:main"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
